envoy1/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0,  port_value: 80 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.router
          route_config:
            name: route
            virtual_hosts:
            - name: nginx_service
              domains: ["nginx.local"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: nginx_cluster
            - name: nginx_service
              domains: ["httpd.local"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: httpd_cluster
  clusters:
  - name: nginx_cluster
    type: STRICT_DNS
    connect_timeout: 0.25s
    lb_policy: ROUND_ROBIN
    hosts:
      - socket_address: { address: envoy1_nginx1_1, port_value: 80 }
      - socket_address: { address: envoy1_nginx2_1, port_value: 80 }
  - name: httpd_cluster
    type: STRICT_DNS
    connect_timeout: 0.25s
    lb_policy: ROUND_ROBIN
    hosts:
      - socket_address: { address: envoy1_httpd1_1, port_value: 80 }
      - socket_address: { address: envoy1_httpd2_1, port_value: 80 }
